change user to name

--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -2,7 +2,7 @@
     action: apt pkg=mysql-server,mytop,python-mysqldb state=latest update-cache=yes force=yes install_recommends=yes
 
   - name: MySQL | Set the root password.
-    action: mysql_user user=root password=$mysql_root_password host=localhost
+    action: mysql_user name=root password=$mysql_root_password host=localhost
     notify:
      - restart mysql
 
