--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -2,24 +2,19 @@
     action: apt pkg=mysql-server,mytop,python-mysqldb state=latest update-cache=yes force=yes install_recommends=yes
 
   - name: Start the MySQL service
-    action: service name=mysqld state=started
-
-  - name: MySQL | Set the root password.
-    action: mysql_user name=root password=$mysql_root_password host=localhost
-    notify:
-     - restart mysql
+    action: service name=mysql state=started
 
   - name: copy .my.cnf file with root password credentials
     template: src=../../webserver/templates/root-my-cnf.j2 dest=/root/.my.cnf owner=root mode=0600
 
-  - name: delete anonymous MySQL server user for $server_hostname
-    action: mysql_user user="" host="$server_hostname" state="absent"
+  - name: delete anonymous MySQL server user for server_hostname
+    action: mysql_user login_user=root login_password=$mysql_root_password user="" host="$server_hostname" state="absent"
 
   - name: delete anonymous MySQL server user for localhost
-    action: mysql_user user="" state="absent"
+    action: mysql_user login_user=root login_password=$mysql_root_password user="" state="absent"
 
   - name: remove the MySQL test database
-    action: mysql_db db=test state=absent
+    action: mysql_db login_user=root login_password=$mysql_root_password  db=test state=absent
 
   - name: Mysql Configuration file
     action: template src=../../webserver/templates/etc-mysql-my-cnf.j2 dest=/etc/mysql/my.cnf
