--- a/examples/example.com/vars/setup.yml
+++ b/examples/example.com/vars/setup.yml
@@ -67,4 +67,4 @@ mysql_max_heap_table_size: '1024M'
 mysql_open_files_limit: '4096'
 
 # mysql
-mysql_root_password: 'nsjLmsk!jsn'
+mysql_root_password: 'nsj,mn,mn'
