--- a/examples/example.com/files/update-exim4.conf.conf
+++ b/examples/example.com/files/update-exim4.conf.conf
@@ -17,7 +17,7 @@
 # This is a Debian specific file
 
 dc_eximconfig_configtype='internet'
-dc_other_hostnames='dev.maks-portal.ru'
+dc_other_hostnames='example.com'
 dc_local_interfaces='127.0.0.1'
 dc_readhost=''
 dc_relay_domains=''
