--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -13,33 +13,33 @@
       - save sysctl
 
   - name: create directories
-    action: file path={{item}} owner=$user group=$user state=directory
+    action: file path={{item}} owner={{user}} group={{user}} state=directory
     with_items:
-      - /home/${user}/domains
-      - /home/${user}/tmp
+      - /home/{{user}}/domains
+      - /home/{{user}}/tmp
 
   - name: create directories
-    action: file path=/home/${user}/domains/$item owner=$user group=www-data state=directory
-    with_items: ${sites}
+    action: file path=/home/{{user}}/domains/{{item}} owner={{user}} group=www-data state=directory
+    with_items: sites
 
   - name: create directories
-    action: file path=/home/${user}/domains/$item/html owner=$user group=www-data state=directory
-    with_items: ${sites}
+    action: file path=/home/{{user}}/domains/{{item}}/html owner={{user}} group=www-data state=directory
+    with_items: sites
 
   - name: create directories
-    action: file path=/home/${user}/domains/$item/logs owner=$user group=www-data state=directory
-    with_items: ${sites}
+    action: file path=/home/{{user}}/domains/{{item}}/logs owner={{user}} group=www-data state=directory
+    with_items: sites
 
   - name: change directory permissions
-    action: command /bin/chmod -R ug+s /home/${user}/domains/$item/html
-    with_items: ${sites}
+    action: command /bin/chmod -R ug+s /home/{{user}}/domains/{{item}}/html
+    with_items: sites
 
   - name: change directory permissions
-    action: command /bin/chmod -R ug+ws /home/${user}/domains/$item/logs
-    with_items: ${sites}
+    action: command /bin/chmod -R ug+ws /home/{{user}}/domains/{{item}}/logs
+    with_items: sites
 
   - name: change directory permissions
-    action: command /bin/chmod 777 /home/${user}/tmp
+    action: command /bin/chmod 777 /home/{{user}}/tmp
 
   - name: add user to group
-    action: command /usr/sbin/addgroup $user www-data
+    action: command /usr/sbin/addgroup {{user}} www-data
